--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -2,21 +2,21 @@
 
 @font-face {
     font-family: 'Playfair Display Medium';
-    src: url('../assets/fonts/PlayfairDisplay-Medium.woff') format('woff');
+    src: url('../assets/fonts/Playfair Display/PlayfairDisplay-Medium.woff') format('woff');
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Playfair Display Semibold';
-    src: url('../assets/fonts/PlayfairDisplay-Semibold.woff') format('woff');
+    src: url('../assets/fonts/Playfair Display/PlayfairDisplay-Semibold.woff') format('woff');
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Montserrat Semibold';
-    src: url('../assets/fonts/Montserrat-Semibold.woff') format('woff');
+    src: url('../assets/fonts/Montserrat/Montserrat-Semibold.woff') format('woff');
     font-style: normal;
     font-display: swap;
 }
